examples/smlfmt-1.2.0/test/fail/reserved-in-long-id.sml
val x = 5

val y = X.Y.a

val z = X.and.b
